--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,15 @@
-name: CI/CD Pipeline
-
-on:
-  push:
-    branches:
-      - main
-
+name: Deploy to Minikube
+on: push
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Build Docker image
+        run: docker build -t my-web-app .
+      - name: Run Minikube
+        run: minikube start
+      - name: Deploy to Minikube
+        run: kubectl apply -f deployment.yaml
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v1
-
-      - name: Build and push Docker image
-        run: |
-          docker build -t <your-dockerhub-username>/my-web-app .
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          docker push <your-dockerhub-username>/my-web-app
